add category API
